allow left column to be wider on larger screens, avoids wrapping in code blocks

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -136,6 +136,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
   .content {
+    max-width: 54rem;
     margin-left: 22rem;
     margin-right: 4rem;
   }
